iptables
#Drop anything we aren't explicitly allowing. All outbound traffic is okay
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
# Accept Pings
-A RH-Firewall-1-INPUT -p icmp --icmp-type echo-request -j ACCEPT
# Log anything on eth0 claiming it's from a local or non-routable network
# If you're using one of these local networks, remove it from the list below
-A INPUT -i eth0 -s 10.0.0.0/8 -j LOG --log-prefix "IP DROP SPOOF A: "
-A INPUT -i eth0 -s 172.16.0.0/12 -j LOG --log-prefix "IP DROP SPOOF B: "
-A INPUT -i eth0 -s 192.168.0.0/16 -j LOG --log-prefix "IP DROP SPOOF C: "
-A INPUT -i eth0 -s 224.0.0.0/4 -j LOG --log-prefix "IP DROP MULTICAST D: "
-A INPUT -i eth0 -s 240.0.0.0/5 -j LOG --log-prefix "IP DROP SPOOF E: "
-A INPUT -i eth0 -d 127.0.0.0/8 -j LOG --log-prefix "IP DROP LOOPBACK: "
# Accept any established connections
-A RH-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# Accept ssh traffic. Restrict this to known ips if possible.
#-A RH-Firewall-1-INPUT -s IP/32 -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#Log and drop everything else
-A RH-Firewall-1-INPUT -j LOG
-A RH-Firewall-1-INPUT -j DROP
##Time and DNS LockDown
-A RH-Firewall-1-OUTPUT-s 1.1.1./32 -p udp -m udp --sport 53 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 1.0.0.1/32 -p udp -m udp --sport 53 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 17.253.54.253/32 -p udp -m udp --sport 123 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 17.253.54.125/32 -p udp -m udp --sport 123 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 17.253.14.253/32 -p udp -m udp --sport 123 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 17.253.14.125/32 -p udp -m udp --sport 123 -j ACCEPT
-A RH-Firewall-1-OUTPUT-s 17.253.52.253/32 -p udp -m udp --sport 123 -j ACCEPT
-A RH-Firewall-1-OUTPUT-p udp -m udp --sport 53 -j DROP
-A RH-Firewall-1-OUTPUT-p udp -m udp --sport 123 -j DROP
COMMIT
